hello-world/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  namespace: hello-world
spec:
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: 8081
